--- a/package.json
+++ b/package.json
@@ -1,52 +1,57 @@
 {
-  "name": "crowdsale",
-  "version": "1.0.0",
-  "private": true,
-  "description": "",
-  "author": "",
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "main": "index.js",
-  "dependencies": {
-    "core-js": "^3.8.3",
-    "ethers": "^5.7.0",
-    "vue": "^3.2.13",
-    "web3": "^1.7.5"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ],
-  "_id": "crowdsale@1.0.0",
-  "license": "ISC",
-  "readme": "ERROR: No README data found!"
+	"name": "swayze",
+	"version": "1.0.0",
+	"private": true,
+	"description": "Project Swayze",
+	"author": "Swayze",
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"main": "index.js",
+	"dependencies": {
+		"@vue/cli-plugin-typescript": "^5.0.8",
+		"core-js": "^3.8.3",
+		"ethers": "^5.7.0",
+		"sass": "^1.54.9",
+		"sass-loader": "^13.0.2",
+		"typescript": "^4.8.3",
+		"vue": "^3.2.13",
+		"web3": "^1.7.5",
+		"vue-router": "^4.1.5"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.16",
+		"@babel/eslint-parser": "^7.12.16",
+		"@vue/cli-plugin-babel": "~5.0.0",
+		"@vue/cli-plugin-eslint": "~5.0.0",
+		"@vue/cli-service": "~5.0.0",
+		"eslint": "^7.32.0",
+		"eslint-plugin-vue": "^8.0.3"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/vue3-essential",
+			"eslint:recommended"
+		],
+		"parserOptions": {
+			"parser": "@babel/eslint-parser"
+		},
+		"rules": {}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not dead",
+		"not ie 11"
+	],
+	"_id": "swayze@1.0.0",
+	"license": "ISC",
+	"readme": "ERROR: No README data found!"
 }
