--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
 	"dependencies": {
 		"@vue/cli-plugin-typescript": "^5.0.8",
 		"core-js": "^3.8.3",
+		"detect-browser-language": "0.0.2",
 		"ethers": "^5.7.0",
+		"get-user-locale": "^2.0.0",
 		"sass": "^1.54.9",
 		"sass-loader": "^13.0.2",
 		"typescript": "^4.8.3",
 		"vue": "^3.2.13",
-		"web3": "^1.7.5",
-		"vue-router": "^4.1.5"
+		"vue-i18n": "^9.2.2",
+		"vue-router": "^4.1.5",
+		"web3": "^1.7.5"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.12.16",
