--- a/api/package.json
+++ b/api/package.json
@@ -11,9 +11,11 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^4.4.0",
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"express-validator": "^6.14.2",
 		"prisma": "^4.4.0",
+		"shortid": "^2.2.16",
 		"ts-node": "^10.9.1",
 		"tslib": "^2.4.0"
 	},
