--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,12 @@
 	"main": "index.js",
 	"dependencies": {
 		"@vue/cli-plugin-typescript": "^5.0.8",
-		"@walletconnect/web3-provider": "^1.8.0",
+		"axios": "^1.1.3",
 		"core-js": "^3.8.3",
 		"detect-browser-language": "0.0.2",
 		"ethers": "^5.7.1",
 		"node-polyfill-webpack-plugin": "^2.0.1",
+		"qrcode-vue3": "^1.4.17",
 		"sass": "^1.54.9",
 		"sass-loader": "^13.0.2",
 		"typescript": "^4.8.3",
