--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -13,6 +13,7 @@
 		"noImplicitAny": false,
 		"strict": true,
 		"strictNullChecks": false,
+		"resolveJsonModule": true,
 		"noImplicitReturns": true,
 		"esModuleInterop": true,
 		"strictPropertyInitialization": false,
