--- a/api/package.json
+++ b/api/package.json
@@ -17,7 +17,8 @@
 		"prisma": "^4.4.0",
 		"shortid": "^2.2.16",
 		"ts-node": "^10.9.1",
-		"tslib": "^2.4.0"
+		"tslib": "^2.4.0",
+		"typescript": "^4.8.4"
 	},
 	"main": "index.ts",
 	"license": "ISC"
