--- a/frontend/config/nginx.conf
+++ b/frontend/config/nginx.conf
@@ -8,6 +8,12 @@ http {
         root  /usr/share/nginx/html;
         include /etc/nginx/mime.types;
 
+        location /api {
+            rewrite  ^/api/(.*) /$1 break;
+            proxy_pass http://api:8081;
+
+        }
+
         location / {
             add_header "Access-Control-Allow-Origin"  *;
             add_header "Access-Control-Allow-Methods" "GET, POST, OPTIONS, HEAD";
